# typeclass

./: .gitignore  proj  readme.md  stack.yaml  typeclass.cabal
src/: Examples.hs  Interpreter.hs  Main.hs  Syntax.hs  TypeCheck.hs  Util.hs
