name:               typeclass
version:            0.1.0.0
synopsis:           An implementation of Haskell-style type classes
homepage:           www.github.com/alexj136/typeclass
author:             Alex Jeffery
maintainer:         A.P.Jeffery@sussex.ac.uk
category:           Language
build-type:         Simple
cabal-version:      >= 1.10
executable typeclass
  default-language:     Haskell2010
  hs-source-dirs:       src
  build-depends:        base, containers, array
  main-is:              Main.hs
library
  default-language:     Haskell2010
  hs-source-dirs:       src
  build-depends:        base, containers, array
  exposed-modules:      Util, Syntax, TypeCheck
